update new posts